--- a/index.html
+++ b/index.html
@@ -561,19 +561,16 @@ tiempo_opt, ahorro = optimizar_descarga(<span class="number">1</span>)
     </section>
 
     <!-- Video Section -->
-    <section id="video" class="video-section">
-        <div class="container">
-            <h2>Video Resumen del Proyecto</h2>
-            <p class="section-subtitle">Presentación visual del desarrollo, metodología y conclusiones de la
-                investigación</p>
+    <!-- CÓDIGO CORREGIDO -->
 
-            <div class="video-container">
-                <video controls>
-                    <source src="video_explicativo.mp4" type="video/mp4">
-                    Tu navegador no soporta la reproducción de videos.
-                </video>
-            </div>
-        </div>
+    <div class="video-container">
+        <video controls>
+            <!-- Se cambió el nombre del archivo para quitar el espacio -->
+            <source src="video_explicativo_.mp4" type="video/mp4">
+            Tu navegador no soporta la reproducción de videos.
+        </video>
+    </div>
+    </div>
     </section>
 
     <!-- Conclusiones -->
@@ -772,6 +769,5 @@ tiempo_opt, ahorro = optimizar_descarga(<span class="number">1</span>)
 
     <script src="js_martec.js"></script>
 </body>
-
 
 </html>
